// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a floating snackbar 1`] = `
<div
  class="snackbar info floating visible"
  role="button"
>
  <span
    aria-label="su-copy"
    class="su-copy icon"
  />
  <div
    class="text"
  >
    3 blocks copied to clipboard
  </div>
  <span
    aria-label="su-times"
    class="su-times clickable closeIcon"
    role="button"
    tabindex="0"
  />
</div>
`;

exports[`Render a info snackbar 1`] = `
<div
  class="snackbar info visible"
  role="button"
>
  <span
    aria-label="su-exclamation-circle"
    class="su-exclamation-circle icon"
  />
  <div
    class="text"
  >
    <strong>
      sulu_admin.info
    </strong>
     - Something unimportant went wrong
  </div>
  <span
    aria-label="su-times"
    class="su-times clickable closeIcon"
    role="button"
    tabindex="0"
  />
</div>
`;

exports[`Render a success snackbar 1`] = `
<div
  class="snackbar success visible"
  role="button"
>
  <span
    aria-label="su-check-circle"
    class="su-check-circle icon"
  />
  <div
    class="text"
  >
    <strong>
      sulu_admin.success
    </strong>
     - Something unimportant went wrong
  </div>
  <span
    aria-label="su-times"
    class="su-times clickable closeIcon"
    role="button"
    tabindex="0"
  />
</div>
`;

exports[`Render a warning snackbar 1`] = `
<div
  class="snackbar warning visible"
  role="button"
>
  <span
    aria-label="su-bell"
    class="su-bell icon"
  />
  <div
    class="text"
  >
    <strong>
      sulu_admin.warning
    </strong>
     - Something unimportant went wrong
  </div>
  <span
    aria-label="su-times"
    class="su-times clickable closeIcon"
    role="button"
    tabindex="0"
  />
</div>
`;

exports[`Render an error snackbar 1`] = `
<div
  class="snackbar error visible"
  role="button"
>
  <span
    aria-label="su-exclamation-triangle"
    class="su-exclamation-triangle icon"
  />
  <div
    class="text"
  >
    <strong>
      sulu_admin.error
    </strong>
     - Something went wrong
  </div>
  <span
    aria-label="su-times"
    class="su-times clickable closeIcon"
    role="button"
    tabindex="0"
  />
</div>
`;

exports[`Render an error snackbar without close button 1`] = `
<div
  class="snackbar error visible"
  role="button"
>
  <span
    aria-label="su-exclamation-triangle"
    class="su-exclamation-triangle icon"
  />
  <div
    class="text"
  >
    <strong>
      sulu_admin.error
    </strong>
     - Something went wrong
  </div>
</div>
`;

exports[`Render an updated error snackbar 1`] = `
<div
  class="snackbar error visible"
  role="button"
>
  <span
    aria-label="su-exclamation-triangle"
    class="su-exclamation-triangle icon"
  />
  <div
    class="text"
  >
    <strong>
      sulu_admin.error
    </strong>
     - Something went wrong again
  </div>
  <span
    aria-label="su-times"
    class="su-times clickable closeIcon"
    role="button"
    tabindex="0"
  />
</div>
`;
